test/lit/pto/ptodsl_subkernel_pipe_contract_reject_transitive_mte.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --emit-pto-ir %s 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5", pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @kernel(%src: memref<16x16xf32, #pto.address_space<gm>>) {
    func.call @simd_helper(%src) : (memref<16x16xf32, #pto.address_space<gm>>) -> ()
    func.return
  }

  func.func private @simd_helper(%src: memref<16x16xf32, #pto.address_space<gm>>) attributes {pto.ptodsl.subkernel_helper = "simd"} {
    pto.section.vector {
      func.call @local_helper(%src) : (memref<16x16xf32, #pto.address_space<gm>>) -> ()
    }
    func.return
  }

  func.func private @local_helper(%src: memref<16x16xf32, #pto.address_space<gm>>) {
    pto.section.vector {
      %tile = pto.declare_tile -> !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>
      pto.tload ins(%src : memref<16x16xf32, #pto.address_space<gm>>) outs(%tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    }
    func.return
  }
}

// CHECK: error: violates PTODSL subkernel pipe contract for root helper @simd_helper: expected PTO ops on PIPE_V only, but found PIPE_MTE2
